Add a check to verify mkdocs builds
Adds a check to the pipeline that verifies mkdocs builds with no errors
or warnings.

It was chosen to also force users to fix warnings, as the additional
pydocstyle linting requirements for mkdocs only show up as warnings if
incorrect.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/azure-pipelines/templates/build-test-job.yml
+++ b/azure-pipelines/templates/build-test-job.yml
@@ -37,6 +37,8 @@ jobs:
     parameters:
       root_package_folder: ${{parameters.root_package_folder}}
 
+  - template: mkdocs-test-steps.yml
+
   - template: spell-test-steps.yml
 
   - template: markdown-lint-steps.yml
