--- a/azure-pipelines/templates/basic-setup-steps.yml
+++ b/azure-pipelines/templates/basic-setup-steps.yml
@@ -21,5 +21,8 @@ steps:
 - script: pip install --upgrade -r requirements.txt
   displayName: 'Install requirements'
 
+- script: pip install --upgrade -r docs/user/requirements.txt
+  displayName: 'Install documentation requirements'
+
 - script: pip install -e .
   displayName: 'Install from Source'
