--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -36,7 +36,7 @@ jobs:
           Image: 'windows-2019'
           PythonVersion: '${{PyVer.value}}'
           ToolChain: 'VS2019'
-        Edk2, Windows, Python ${{PyVer}}:
+        Edk2, Ubuntu, Python ${{PyVer}}:
           Tag: 'Edk2'
           Image: 'ubuntu-20.04'
           ToolChain: 'GCC5'
