--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -18,26 +18,26 @@ jobs:
   strategy:
     matrix:
       ${{each PyVer in parameters.PythonVersionList}}:
-        ProjectMu, Windows, Python ${{PyVer}}:
-          Tag: 'ProjectMu'
-          Image: 'windows-2022'
-          PythonVersion: '${{PyVer}}'
-          ToolChain: 'VS2022'
+        # ProjectMu, Windows, Python ${{PyVer}}:
+        #   Tag: 'ProjectMu'
+        #   Image: 'windows-2022'
+        #   PythonVersion: '${{PyVer}}'
+        #   ToolChain: 'VS2022'
         ProjectMu, Ubuntu, Python ${{PyVer}}:
           Tag: 'ProjectMu'
           Image: 'ubuntu-20.04'
           PythonVersion: '${{PyVer}}'
           ToolChain: 'GCC5'
-        Edk2, Windows, Python ${{PyVer}}:
-          Tag: 'Edk2'
-          Image: 'windows-2019'
-          PythonVersion: '${{PyVer}}'
-          ToolChain: 'VS2019'
-        Edk2, Ubuntu, Python ${{PyVer}}:
-          Tag: 'Edk2'
-          Image: 'ubuntu-20.04'
-          ToolChain: 'GCC5'
-          PythonVersion: '${{PyVer}}'
+        # Edk2, Windows, Python ${{PyVer}}:
+        #   Tag: 'Edk2'
+        #   Image: 'windows-2019'
+        #   PythonVersion: '${{PyVer}}'
+        #   ToolChain: 'VS2019'
+        # Edk2, Ubuntu, Python ${{PyVer}}:
+        #   Tag: 'Edk2'
+        #   Image: 'ubuntu-20.04'
+        #   ToolChain: 'GCC5'
+        #   PythonVersion: '${{PyVer}}'
 
   workspace:
     clean: all
