--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -10,7 +10,7 @@
 parameters:
 - name: PythonVersionList
   type: object
-  default: ['3.9', '3.10', '3.11']
+  default: ['3.8', '3.9', '3.10', '3.11']
 
 jobs:
 - job:
@@ -59,10 +59,6 @@ jobs:
 
   - script: pip install -e .
     displayName: 'Install from Source'
-
-  - task: PythonScript@0
-    inputs:
-      scriptPath: log.py
 
   - powershell: choco install qemu --version=2020.08.14; Write-Host "##vso[task.prependpath]c:\Program Files\qemu"
     displayName: Install QEMU and Set QEMU on path # friendly name displayed in the UI
