--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -105,7 +105,7 @@ jobs:
     displayName: "Publish logs"
     inputs:
       pathtoPublish: '$(Build.ArtifactStagingDirectory)'
-      artifactName: 'Integration Test Logs $(variables.Tag) $(variables.Image) $(variables.Image)'
+      artifactName: 'Integration Test Logs ${{variables.Tag}} ${{variables.Image}} ${{variables.Image}}'
     condition: succeededOrFailed()
 
   - task: PublishTestResults@2
