--- a/.github/workflows/prgate.yml
+++ b/.github/workflows/prgate.yml
@@ -13,28 +13,42 @@ on:
 jobs:
   unit-test:
     name: Unit Tests
+    
     runs-on: ${{ matrix.os }}
+    
     strategy:
-      fail-fast: true
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
         os: [ubuntu-latest, windows-latest]
 
-
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -e . 
-    - name: Test with pytest
-      run: |
-        pytest
+    
+    - name: Run Unit Tests
+      run: coverage run --include=edk2toolext/* -m pytest --junitxml=test.junit.xml --html=pytest_report.html --self-contained-html 
+
+    - name: Upload coverage to codecov
+      uses: codecov/codecov-action@v2
+      with:
+        verbose: false
+    
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Artifacts-${{matrix.os}}-${{python-version}}
+        path: |
+          pytest_report.html
+          test.junit.xml
   
   ci:
     name: CI Tests
@@ -43,6 +57,7 @@ jobs:
       python-version: "3.11"
       node-version: "19"
       package-src: "edk2toolext"
+    
     steps:
       - uses: actions/checkout@v3
       
@@ -62,16 +77,6 @@ jobs:
           pip install -r requirements.txt
           pip install -r docs/user/requirements.txt
           pip install -e .
-
-      - name: Run code coverage
-        run: |
-          pip install coverage
-          coverage run -m unittest
-      
-      - name: Upload coverage to codecov
-        uses: codecov/codecov-action@v2
-        with:
-          verbose: false
 
       - name: Install npm dependencies
         run: |
