--- a/.github/workflows/prgate.yml
+++ b/.github/workflows/prgate.yml
@@ -18,8 +18,8 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.9"] # ["3.9", "3.10", "3.11"]
+        os: [ windows-latest ] #[ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v3
