--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
   set-python:
     name: Set Python Versions
     runs-on: ubuntu-latest
+    outputs:
+      VERSIONS: ${{ steps.set-python.outputs.VERSIONS}}
     steps:
       - name: Set Python Versions
         id: set-python
