--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,55 +18,55 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       VERSIONS: ${{ steps.set-python.outputs.VERSIONS}}
+    env:
+      versions: "['3.11', '3.10', '3.9']" # Keep in descending order
     steps:
       - name: Set Python Versions
         id: set-python
-        run: echo "VERSIONS=['3.11', '3.10', '3.9']" >> $GITHUB_OUTPUT
+        run: echo "VERSIONS=$env.versions" >> $GITHUB_OUTPUT
 
-  # unit-test:
-  #   name: Unit Tests
-  #   needs: set-python
+  unit-test:
+    name: Unit Tests
+    needs: set-python
 
-  #   runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
   
-  #   strategy:
-  #     matrix:
-  #       # Reminder! When updating this python version, also update the python
-  #       # Version around line 64.
-  #       python-version: ${{ fromJson(needs.set-python.outputs.VERSIONS) }}
-  #       os: [ubuntu-latest, windows-latest]
+    strategy:
+      matrix:
+        python-version: ${{ fromJson(needs.set-python.outputs.VERSIONS) }}
+        os: [ubuntu-latest, windows-latest]
 
-  #   steps:
-  #   - uses: actions/checkout@v3
+    steps:
+    - uses: actions/checkout@v3
     
-  #   - name: Set up Python ${{ matrix.python-version }}
-  #     uses: actions/setup-python@v3
-  #     with:
-  #       python-version: ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
     
-  #   - name: Install dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install --upgrade -r requirements.txt
-  #       pip install -e . 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade -r requirements.txt
+        pip install -e . 
     
-  #   - name: Run Unit Tests
-  #     run: |
-  #       coverage run --include=edk2toolext\* -m pytest --junitxml=test.junit.xml --html=pytest_report.html --self-contained-html
+    - name: Run Unit Tests
+      run: |
+        coverage run --include=edk2toolext\* -m pytest --junitxml=test.junit.xml --html=pytest_report.html --self-contained-html
         
 
-  #   - name: Upload coverage to codecov
-  #     uses: codecov/codecov-action@v2
-  #     with:
-  #       verbose: false
+    - name: Upload coverage to codecov
+      uses: codecov/codecov-action@v2
+      with:
+        verbose: false
     
-  #   - uses: actions/upload-artifact@v3
-  #     with:
-  #       name: Artifacts-${{matrix.os}}-${{matrix.python-version}}
-  #       path: |
-  #         pytest_report.html
-  #         test.junit.xml
-  #     if: failure()
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Artifacts-${{matrix.os}}-${{matrix.python-version}}
+        path: |
+          pytest_report.html
+          test.junit.xml
+      if: failure()
   
   ci:
     name: CI Tests
